package edu.fiuba.algo3.modelo;

public interface EstadoDeActivacion {

    EstadoDeActivacion activarseEn(Pais unPais);
}
